<resources>
    <string name="app_name">Heart Diagnosis</string>
    <string name="welcome_page">WELCOME!</string>
    <string name="nice_to">Nice to see you again!</string>
    <string name="not_member">Not a member?</string>
    <string name="register_here">Register</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="name_hint">Enter your name</string>
    <string name="enter_pwd">Password</string>
    <string name="create_pwd">Create Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="member">Already a member?</string>
    <string name="login_here">LOGIN</string>
    <string name="login">Login</string>
    <string name="signup_here">SIGNUP</string>
    <string name="signup">SignUp</string>
    <string name="header">Diagnose it</string>
    <string name="emailId">Enter your Email-Id</string>
    <string name="take_care">Take care of yourself before its too late </string>
    <string name="enter_data">Enter Details</string>
    <string name="done">DONE</string>
    <string name="content_description">Press this to logout</string>
    <string name="age_hint">Enter your age</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select Gender</string>
    <string name="password">Password</string>
    <string name="other">Other</string>
</resources>