<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomesreen"
    app:layout_constraintCircleRadius="20dp"
    app:layout_constraintWidth_max="wrap"
    app:layout_constraintWidth_min="wrap"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_toStartOf="@+id/signupbtn"
        android:fontFamily="serif"
        android:maxWidth="200dp"
        android:minWidth="140dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/login_here"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="12sp"
        app:layout_constraintEnd_toStartOf="@+id/signupbtn"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:fontFamily="serif"
        android:maxWidth="200dp"
        android:minWidth="140dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="235dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/seaweed_script"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="368dp"
        android:layout_height="25dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/alegreya_sc_black_italic"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/take_care"
        android:textColor="@color/tint"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />
</androidx.constraintlayout.widget.ConstraintLayout>